[workspace]
resolver = "2"
members = ["kernel-build", "common", "01-gemm", "02-flash-attention", "03-llm-engine", "04-cutlass"]

[workspace.dependencies]
cudarc = { version = "0.19", features = ["cuda-12090", "cublas", "f16"] }
kernel-build = { path = "kernel-build" }
common = { path = "common" }

[profile.release]
debug = true
